--- a/index.html
+++ b/index.html
@@ -33,13 +33,21 @@ li a:hover:not(.active) {
 </head>
 <body>
 
+<header>
 <ul>
   <li><a href="#home">Home</a></li>
   <li><a href="#news">News</a></li>
   <li><a href="#contact">Contact</a></li>
   <li style="float:right"><a class="active" href="#about">About</a></li>
 </ul>
+</header>
 
+<content>
 <h3>Selamat Datang</h3>
+</content>
+
+<footer>Copyright: devkelinc</footer>
 </body>
 </html>
+
+
